Fix some errors

--- a/NiQeM-result/Quest.html
+++ b/NiQeM-result/Quest.html
@@ -9,7 +9,7 @@
 
     <body>
         <h2 id="location"><button type="button" onclick="Start()">Start</button></h2>
-        <p id="string"><p>
+        <p id="string"></p>
         <p><img id="picture" src="Core/Start.jpg" alt="" style="width:400px"></p>
         <p>
             <button type="button" onclick="Back()">Go back</button>
@@ -21,7 +21,7 @@
             <button type="button" onclick="Next()">Next thing</button>
         </p>
         <p id="thing"></p>
-        <p id="comment"><p>
-        <p id="next"><p>
+        <p id="comment"></p>
+        <p id="next"></p>
     </body>
 </html>
